<resources>
	<string name="app_name">Calorie Tracker</string>
	<string name="todo">TODO</string>
	<string name="timePLACEHOLDER">Time</string>
	<string name="caloriesPLACEHOLDER">Calories</string>
	<string name="namePLACEHOLDER">Name</string>
	<string name="editSTR">Edit</string>
	<string name="number_of_calories">Number of Calories</string>
	<string name="enter_food_name">Enter Food Name</string>
	<string name="cancelSTR">CANCEL</string>
	<string name="saveSTR">SAVE</string>
	<string name="grams_of_proteinSTR">Grams of Protein</string>
	<string name="grams_of_carbsSTR">Grams of Carbs</string>
	<string name="grams_of_fatSTR">Grams of Fat</string>
	<string name="service_size_in_ozSTR">Service Size in oz</string>
	<string name="edit_timeSTR">EDIT TIME</string>
	<string name="number_of_servingsSTR">Number of Servings</string>
	<string name="detailsSTR">DETAILS</string>
	<string name="fat_in_gramsSTR">Fat (in grams):</string>
	<string name="carbohydrates_in_gramsSTR">Carbohydrates (in grams):</string>
	<string name="protein_in_gramsSTR">Protein (in grams):</string>
	<string name="serving_size_in_ouncesSTR">Serving Size (in ounces):</string>
	<string name="mealSTR">Meal:</string>
	<string name="calUnitSTR">" cal"</string>
	<string name="edit_nameLBL_STR">Name:</string>
	<string name="deleteSTR">Delete</string>
	<string name="title_activity_settings">SettingsActivity</string>
	
	<!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>
	
	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>
	
	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="sort_bySTR">Sort By:</string>
	<string name="food_nameSTR">Food Name</string>
	<string name="caloriesCTR">Calories</string>
	<string name="carbohydratesSTR">Carbohydrates</string>
	<string name="fatSTR">Fat</string>
	<string name="proteinSTR">Protein</string>
	<string name="doneSTR">DONE</string>
	<string name="exitSTR">EXIT</string>
	<string name="todoSTR">TODO</string>
	<string name="settingsBTN_STR">Settings</string>
	<string name="ascendingDB_STR">Ascending</string>
	<string name="descendingRB_STR">Descending</string>
	<string name="timestampRB_STR">Date and Time</string>
	<string name="serving_numberLBL_STR">"Number of Servings: "</string>
	<string name="homeITEM_STR">HOME</string>
	<string name="todayITEM_STR">TODAY</string>
	<string name="mealsITEM_STR">MEALS</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>