<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".SettingsActivity">
	
	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sort_bySTR"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.23"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.13" />
	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:checkedButton="@id/settings_foodNameRADIO"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4">
		<RadioButton
			android:id="@+id/settings_foodNameRADIO"
			style="@android:style/Widget.Holo.CompoundButton.RadioButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/food_nameSTR" />
		<RadioButton
			android:id="@+id/settings_caloriesRADIO"
			style="@android:style/Widget.Holo.CompoundButton.RadioButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/caloriesCTR" />
		<RadioButton
			android:id="@+id/settings_carbsRADIO"
			style="@android:style/Widget.Holo.CompoundButton.RadioButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/carbohydratesSTR" />
	
	
	</RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>