<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_margin="16dp"
                                                   android:background="@color/cardview_light_background"
                                                   android:elevation="16dp"
                                                   android:fadingEdge="vertical"
                                                   android:padding="16dp">
	
	<Button
		android:id="@+id/editBTN"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/editSTR"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/caloriesLBL"
		tools:ignore="PrivateResource"/>
	<TextView
		android:id="@+id/nameLBL"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/namePLACEHOLDER"
		android:textColor="@android:color/secondary_text_light"
		android:textSize="24sp"
		android:typeface="normal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="PrivateResource"/>
	<TextView
		android:id="@+id/caloriesLBL"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/caloriesPLACEHOLDER"
		android:textSize="24sp"
		android:textColor="@android:color/secondary_text_light"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	<TextView
		android:id="@+id/timeLBL"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/timePLACEHOLDER"
		android:textColor="@android:color/secondary_text_light"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nameLBL"
		tools:ignore="PrivateResource"/>
</androidx.constraintlayout.widget.ConstraintLayout>